--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -1603,26 +1603,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "822083"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "getCountyPopulation(fips)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 75,
    "metadata": {},
    "outputs": [],
@@ -1644,13 +1624,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This function generates the random numbers for the parameters being tested\n",
-    "def π():\n",
-    "    return 0"
+    "def π(R0,γ,f,R0_μ=2.5,R0_σ=2.0,γ_μ=0.1,γ_σ=0.5,f_μ=0.005,f_σ=0.1):\n",
+    "    mean = np.array([R0_μ,γ_μ,f_μ])\n",
+    "    cov = np.diag([R0_σ,γ_σ,f_σ])\n",
+    "    normalDist = stats.multivariate_normal(mean=mean,cov=cov)\n",
+    "    proposedValues = normalDist.rvs()\n",
+    "    return proposedValues"
    ]
   },
   {
