implemented pi_prior

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -1629,7 +1629,7 @@
    "outputs": [],
    "source": [
     "# This function generates the random numbers for the parameters being tested\n",
-    "def π(R0,γ,f,R0_μ=2.5,R0_σ=2.0,γ_μ=0.1,γ_σ=0.5,f_μ=0.005,f_σ=0.1):\n",
+    "def π(R0_μ=2.5,R0_σ=2.0,γ_μ=0.1,γ_σ=0.5,f_μ=0.005,f_σ=0.1):\n",
     "    mean = np.array([R0_μ,γ_μ,f_μ])\n",
     "    cov = np.diag([R0_σ,γ_σ,f_σ])\n",
     "    normalDist = stats.multivariate_normal(mean=mean,cov=cov)\n",
@@ -1639,13 +1639,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This function calculates the probability that the parameters are pulled from their distribution\n",
-    "def π_Prior():\n",
-    "    return 0"
+    "def π_Prior(R0,γ,f,R0_μ=2.5,R0_σ=2.0,γ_μ=0.1,γ_σ=0.5,f_μ=0.005,f_σ=0.1):\n",
+    "    mean = np.array([R0_μ,γ_μ,f_μ])\n",
+    "    cov = np.diag([R0_σ,γ_σ,f_σ])\n",
+    "    normalDist = stats.multivariate_normal(mean=mean,cov=cov)\n",
+    "    p = normalDist.pdf([R0,γ,f])\n",
+    "    return p"
    ]
   },
   {
