date prints correctly now too

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -1623,11 +1623,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
     "def plotCountyData(fips=17031,year=2020,month=4,day=6,toPlot=\"new cases\"):\n",
+    "    dateToPlot = dt.datetime(year=2020,month=4,day=6)\n",
     "    fig,(mapax,lineax) = plt.subplots(1,2,figsize=(50,15),gridspec_kw={'width_ratios': [2, 1]})\n",
     "    divider = make_axes_locatable(mapax)\n",
     "    cax = divider.append_axes(\"right\", size=\"5%\", pad=0.1)\n",
@@ -1636,7 +1637,7 @@
     "    gdf_countyTimeSeriesDiff[gdf_countyTimeSeriesDiff[\"fips\"]==fips].set_index(\"date\")[\"cases\"].plot(ax=lineax,label=\"Cases\")\n",
     "    gdf_countyTimeSeriesDiff[gdf_countyTimeSeriesDiff[\"fips\"]==fips].set_index(\"date\")[\"deaths\"].plot(ax=lineax,label=\"Deaths\")\n",
     "    gdf_countyTimeSeriesDiff[gdf_countyTimeSeriesDiff[\"fips\"]==fips].boundary.plot(ax=mapax,color=\"red\")\n",
-    "    mapax.set_title(\"US Cases on 06 April 2020\")\n",
+    "    mapax.set_title(f\"US Cases on {dateToPlot.strftime('%d %B %Y')}\")\n",
     "    lineax.set_title(f\"Cases in {gdf_countyTimeSeriesDiff[gdf_countyTimeSeriesDiff['fips']==fips]['NAMELSAD'].iloc[0]}, {gdf_countyTimeSeriesDiff[gdf_countyTimeSeriesDiff['fips']==fips]['state'].iloc[0]}\")\n",
     "    lineax.legend()\n",
     "    fig.tight_layout()"
@@ -1644,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
