I should have everything except log likelihoods

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -1894,9 +1894,43 @@
     "    acceptanceRatios = []\n",
     "    iterations = []\n",
     "    \n",
+    "    # set a starting point\n",
     "    R0,γ,f = π()\n",
     "    \n",
+    "    # pull population and observation data, and set range of dates\n",
     "    \n",
+    "    # loop through the MCMC\n",
+    "    for i in track(range(0,n)):\n",
+    "        iterations.append(i)\n",
+    "        \n",
+    "        # generate a set of proposed values\n",
+    "        proposed_R0,proposed_γ,proposed_f = π()\n",
+    "        proposed_R0_s.append(proposed_R0)\n",
+    "        proposed_γ_s.append(proposed_γ)\n",
+    "        proposed_f_s.append(proposed_f)\n",
+    "        \n",
+    "        # calculate the acceptance probability\n",
+    "        α = 0 # get this correct\n",
+    "        α = min(1.0,α)\n",
+    "        acceptanceRatios.append(α)\n",
+    "        accepted = False\n",
+    "        \n",
+    "        # decide if we accept\n",
+    "        if α == 1: # accept\n",
+    "            R0,γ,f = proposed_R0,proposed_γ,proposed_f\n",
+    "            accepted = True\n",
+    "        else: # draw a rnadom number and take the probability based on α\n",
+    "            rand = np.random.random()\n",
+    "            if rand < α: # accept\n",
+    "                R0,γ,f = proposed_R0,proposed_γ,proposed_f\n",
+    "                accepted = True\n",
+    "        \n",
+    "        # update our iteration\n",
+    "        R0_s.append(R0)\n",
+    "        γ_s.append(γ)\n",
+    "        f_s.append(f)\n",
+    "        accepted_s.append(accepted)\n",
+    "        \n",
     "    # return\n",
     "    df = pd.DataFrame({\"i\":iterations,\"R0\":R0_s,\"γ\":γ_s,\"f\":f_s,\n",
     "                       \"Proposed R0\":proposed_R0_s,\"Proposed γ\":proposed_γ_s,\n",
