added start and end date

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -1878,7 +1878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1898,6 +1898,10 @@
     "    R0,γ,f = π()\n",
     "    \n",
     "    # pull population and observation data, and set range of dates\n",
+    "    population = getCountyPopulation(fips)\n",
+    "    observations =  getCountyCOVIDData(fips)\n",
+    "    startDate = observations.index[0]\n",
+    "    endDate = observations.index[-1]\n",
     "    \n",
     "    # loop through the MCMC\n",
     "    for i in track(range(0,n)):\n",
@@ -1939,6 +1943,24 @@
     "    return df\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2020-04-11 00:00:00')"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
