should be set up, now need to set up log liklihood function and that should be it

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -1914,7 +1914,7 @@
     "        proposed_f_s.append(proposed_f)\n",
     "        \n",
     "        # calculate the acceptance probability\n",
-    "        α = 0 # get this correct\n",
+    "        α = np.exp(np.log(π_Prior(proposed_R0,proposed_γ,proposed_f)) + π_Log_Liklihood(observations,proposed_R0,proposed_γ,proposed_f) - np.log(π_Prior(R0,γ,f)) - π_Log_Liklihood(observations,R0,γ,f))\n",
     "        α = min(1.0,α)\n",
     "        acceptanceRatios.append(α)\n",
     "        accepted = False\n",
