added timestamp when update git

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -74,33 +74,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data last updated 2020-05-02 12:10:05.749769\n"
+     ]
+    }
+   ],
    "source": [
     "nyt = git.cmd.Git(\"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\covid\\\\covid-19-data\")\n",
-    "nyt.pull()"
+    "nyt.pull()\n",
+    "print(f\"Data last updated {dt.datetime.now()}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Updating 806b02c4..df78742b\\nFast-forward\\n README.md                                          |   11 +-\\n csse_covid_19_data/README.md                       |   15 +-\\n csse_covid_19_data/UID_ISO_FIPS_LookUp_Table.csv   |   21 +\\n .../csse_covid_19_daily_reports/04-28-2020.csv     | 3164 ++++++++++\\n .../csse_covid_19_daily_reports/04-29-2020.csv     | 3169 ++++++++++\\n .../csse_covid_19_daily_reports/04-30-2020.csv     | 3178 ++++++++++\\n .../csse_covid_19_daily_reports/05-01-2020.csv     | 3189 ++++++++++\\n .../csse_covid_19_daily_reports_us/04-28-2020.csv  |   60 +\\n .../csse_covid_19_daily_reports_us/04-29-2020.csv  |   60 +\\n .../csse_covid_19_daily_reports_us/04-30-2020.csv  |   59 +\\n .../csse_covid_19_daily_reports_us/05-01-2020.csv  |   59 +\\n .../csse_covid_19_time_series/Errata.csv           |   13 +-\\n .../csse_covid_19_time_series/README.md            |    2 +-\\n .../time_series_covid19_confirmed_US.csv           | 6525 ++++++++++----------\\n .../time_series_covid19_confirmed_global.csv       |  532 +-\\n .../time_series_covid19_deaths_US.csv              | 6525 ++++++++++----------\\n .../time_series_covid19_deaths_global.csv          |  532 +-\\n .../time_series_covid19_recovered_global.csv       |  504 +-\\n 18 files changed, 20304 insertions(+), 7314 deletions(-)\\n create mode 100644 csse_covid_19_data/csse_covid_19_daily_reports/04-28-2020.csv\\n create mode 100644 csse_covid_19_data/csse_covid_19_daily_reports/04-29-2020.csv\\n create mode 100644 csse_covid_19_data/csse_covid_19_daily_reports/04-30-2020.csv\\n create mode 100644 csse_covid_19_data/csse_covid_19_daily_reports/05-01-2020.csv\\n create mode 100644 csse_covid_19_data/csse_covid_19_daily_reports_us/04-28-2020.csv\\n create mode 100644 csse_covid_19_data/csse_covid_19_daily_reports_us/04-29-2020.csv\\n create mode 100644 csse_covid_19_data/csse_covid_19_daily_reports_us/04-30-2020.csv\\n create mode 100644 csse_covid_19_data/csse_covid_19_daily_reports_us/05-01-2020.csv'"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data last updated 2020-05-02 12:10:06.301593\n"
+     ]
     }
    ],
    "source": [
     "jhu = git.cmd.Git(\"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\covid\\\\COVID-19\\\\csse_covid_19_data\\\\csse_covid_19_daily_reports\")\n",
-    "jhu.pull()"
+    "jhu.pull()\n",
+    "print(f\"Data last updated {dt.datetime.now()}\")"
    ]
   },
   {
