my logliklihoods are all negative infinity

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -2293,7 +2293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2303,6 +2303,7 @@
     "    cov = np.diag([R0_σ,γ_σ,f_σ])\n",
     "    normalDist = stats.multivariate_normal(mean=mean,cov=cov)\n",
     "    p = normalDist.pdf([R0,γ,f])\n",
+    "    print(p)\n",
     "    return p"
    ]
   },
@@ -2759,7 +2760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2777,12 +2778,13 @@
     "        errorDist = stats.norm(loc=predictedDeaths,scale=σ)\n",
     "        p = errorDist.pdf(actualDeaths)\n",
     "        logLiklihood += np.log(p)\n",
+    "    print(f\"logLiklihood: {logLiklihood}\")\n",
     "    return logLiklihood"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3517,25 +3519,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div><span class=\"Text-label\" style=\"display:inline-block; overflow:hidden; white-space:nowrap; text-overflow:ellipsis; min-width:0; max-width:15ex; vertical-align:middle; text-align:right\"></span>\n",
-       "<progress style=\"width:60ex\" max=\"100\" value=\"100\" class=\"Progress-main\"/></progress>\n",
-       "<span class=\"Progress-label\"><strong>100%</strong></span>\n",
-       "<span class=\"Iteration-label\">100/100</span>\n",
-       "<span class=\"Time-label\">[00:16<00:00, 0.16s/it]</span></div>"
+       "<progress style=\"width:60ex\" max=\"100\" value=\"42\" class=\"Progress-main\"/></progress>\n",
+       "<span class=\"Progress-label\"><strong>42%</strong></span>\n",
+       "<span class=\"Iteration-label\">42/100</span>\n",
+       "<span class=\"Time-label\">[00:07<00:00, 0.16s/it]</span></div>"
       ],
       "text/plain": [
        "\u001b[A\u001b[2K\r",
-       " [████████████████████████████████████████████████████████████] 100/100 [00:16<00:00, 0.16s/it]"
+       " [█████████████████████████###################################] 42/100 [00:07<00:00, 0.16s/it]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5923256205701748\n",
+      "logLiklihood: -inf\n",
+      "7.84857980481399\n",
+      "logLiklihood: -inf\n",
+      "nan\n"
+     ]
     },
     {
      "name": "stderr",
@@ -3549,6 +3562,218 @@
       "\n",
       "invalid value encountered in double_scalars\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.026551226907291\n",
+      "logLiklihood: -inf\n",
+      "1.5923256205701748\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "1.9958277727182714\n",
+      "logLiklihood: -inf\n",
+      "1.026551226907291\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "3.1791133410590158\n",
+      "logLiklihood: -inf\n",
+      "1.9958277727182714\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "0.001003806237435701\n",
+      "logLiklihood: -inf\n",
+      "3.1791133410590158\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "1.5508304780892874\n",
+      "logLiklihood: -inf\n",
+      "0.001003806237435701\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "5.027985076895596\n",
+      "logLiklihood: -inf\n",
+      "1.5508304780892874\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "6.157482295900797\n",
+      "logLiklihood: -inf\n",
+      "5.027985076895596\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "1.324593003131865e-05\n",
+      "logLiklihood: -inf\n",
+      "6.157482295900797\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "4.149696932419411\n",
+      "logLiklihood: -inf\n",
+      "1.324593003131865e-05\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "1.4599898540013023\n",
+      "logLiklihood: -inf\n",
+      "4.149696932419411\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "0.47942325024660415\n",
+      "logLiklihood: -inf\n",
+      "1.4599898540013023\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "0.004646485800301488\n",
+      "logLiklihood: -inf\n",
+      "0.47942325024660415\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "1.2457156002947625\n",
+      "logLiklihood: -inf\n",
+      "0.004646485800301488\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "0.0009260239976504118\n",
+      "logLiklihood: -inf\n",
+      "1.2457156002947625\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "1.126208793344045\n",
+      "logLiklihood: -inf\n",
+      "0.0009260239976504118\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "0.05455433123958603\n",
+      "logLiklihood: -inf\n",
+      "1.126208793344045\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "0.17782108718171255\n",
+      "logLiklihood: -inf\n",
+      "0.05455433123958603\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "0.7520672908819136\n",
+      "logLiklihood: -inf\n",
+      "0.17782108718171255\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "0.03784744743276082\n",
+      "logLiklihood: -inf\n",
+      "0.7520672908819136\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "0.2038105057821796\n",
+      "logLiklihood: -inf\n",
+      "0.03784744743276082\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "0.3800309167353488\n",
+      "logLiklihood: -inf\n",
+      "0.2038105057821796\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "0.48004496500006383\n",
+      "logLiklihood: -inf\n",
+      "0.3800309167353488\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "0.09316724531484596\n",
+      "logLiklihood: -inf\n",
+      "0.48004496500006383\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "0.00872127082604345\n",
+      "logLiklihood: -inf\n",
+      "0.09316724531484596\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "5.948079414116801\n",
+      "logLiklihood: -inf\n",
+      "0.00872127082604345\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "0.3757801828734446\n",
+      "logLiklihood: -inf\n",
+      "5.948079414116801\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "0.0014539859054193396\n",
+      "logLiklihood: -inf\n",
+      "0.3757801828734446\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "7.891734942596199\n",
+      "logLiklihood: -inf\n",
+      "0.0014539859054193396\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "0.12005120286369761\n",
+      "logLiklihood: -inf\n",
+      "7.891734942596199\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "0.05417739783609\n",
+      "logLiklihood: -inf\n",
+      "0.12005120286369761\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "3.0564678418201923\n",
+      "logLiklihood: -inf\n",
+      "0.05417739783609\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "2.1262060573908856\n",
+      "logLiklihood: -inf\n",
+      "3.0564678418201923\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "0.050347285235969395\n",
+      "logLiklihood: -inf\n",
+      "2.1262060573908856\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "2.9436373733928827\n",
+      "logLiklihood: -inf\n",
+      "0.050347285235969395\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "5.92665301570643\n",
+      "logLiklihood: -inf\n",
+      "2.9436373733928827\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "5.15381578554534\n",
+      "logLiklihood: -inf\n",
+      "5.92665301570643\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "1.956615161435615\n",
+      "logLiklihood: -inf\n",
+      "5.15381578554534\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "1.2763248681969976\n",
+      "logLiklihood: -inf\n",
+      "1.956615161435615\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "1.168064240208105\n",
+      "logLiklihood: -inf\n",
+      "1.2763248681969976\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "5.626275309007117\n",
+      "logLiklihood: -inf\n",
+      "1.168064240208105\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "0.9146989724728968\n",
+      "logLiklihood: -inf\n",
+      "5.626275309007117\n",
+      "logLiklihood: -inf\n",
+      "nan\n",
+      "5.767433558369661\n"
      ]
     }
    ],
