time to delete anything I'm not going to use

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data last updated 2020-05-12 21:50:15.446790\n"
+      "Data last updated 2020-05-13 09:37:12.382762\n"
      ]
     }
    ],
@@ -97,14 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data last updated 2020-05-12 21:50:16.751455\n"
+      "Data last updated 2020-05-13 09:37:13.210665\n"
      ]
     }
    ],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "Name: fips, Length: 3193, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "3193"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "3233"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
        "855   POLYGON ((-86.74919 33.99760, -86.74902 33.997...  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
        "3193"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "3142"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,16 +440,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1e46d3106c8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2652fe02fc8>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -486,11 +486,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_nytCountyData = pd.read_csv(nytCountyData)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>county</th>\n",
+       "      <th>state</th>\n",
+       "      <th>fips</th>\n",
+       "      <th>cases</th>\n",
+       "      <th>deaths</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-21</td>\n",
+       "      <td>Snohomish</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>53061.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-22</td>\n",
+       "      <td>Snohomish</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>53061.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-01-23</td>\n",
+       "      <td>Snohomish</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>53061.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-01-24</td>\n",
+       "      <td>Cook</td>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>17031.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-01-24</td>\n",
+       "      <td>Snohomish</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>53061.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date     county       state     fips  cases  deaths\n",
+       "0  2020-01-21  Snohomish  Washington  53061.0      1       0\n",
+       "1  2020-01-22  Snohomish  Washington  53061.0      1       0\n",
+       "2  2020-01-23  Snohomish  Washington  53061.0      1       0\n",
+       "3  2020-01-24       Cook    Illinois  17031.0      1       0\n",
+       "4  2020-01-24  Snohomish  Washington  53061.0      1       0"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_nytCountyData.head()"
    ]
   },
   {
@@ -549,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +689,7 @@
        "      <td>2020-05-11</td>\n",
        "      <td>New York City</td>\n",
        "      <td>New York</td>\n",
-       "      <td>36047</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>190546</td>\n",
        "      <td>19563</td>\n",
        "    </tr>\n",
@@ -596,7 +698,7 @@
        "      <td>2020-05-10</td>\n",
        "      <td>New York City</td>\n",
        "      <td>New York</td>\n",
-       "      <td>36047</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>189656</td>\n",
        "      <td>19436</td>\n",
        "    </tr>\n",
@@ -605,7 +707,7 @@
        "      <td>2020-05-09</td>\n",
        "      <td>New York City</td>\n",
        "      <td>New York</td>\n",
-       "      <td>36047</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>188663</td>\n",
        "      <td>19324</td>\n",
        "    </tr>\n",
@@ -614,7 +716,7 @@
        "      <td>2020-05-08</td>\n",
        "      <td>New York City</td>\n",
        "      <td>New York</td>\n",
-       "      <td>36047</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>187157</td>\n",
        "      <td>19210</td>\n",
        "    </tr>\n",
@@ -623,7 +725,7 @@
        "      <td>2020-05-07</td>\n",
        "      <td>New York City</td>\n",
        "      <td>New York</td>\n",
-       "      <td>36047</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>185653</td>\n",
        "      <td>19141</td>\n",
        "    </tr>\n",
@@ -637,39 +739,39 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>48145</th>\n",
+       "      <th>48131</th>\n",
        "      <td>2020-04-10</td>\n",
-       "      <td>Greene</td>\n",
+       "      <td>Emporia city</td>\n",
        "      <td>Virginia</td>\n",
-       "      <td>51079</td>\n",
-       "      <td>4</td>\n",
+       "      <td>51595.0</td>\n",
+       "      <td>5</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>48144</th>\n",
+       "      <th>48130</th>\n",
        "      <td>2020-04-10</td>\n",
-       "      <td>Goochland</td>\n",
+       "      <td>Dinwiddie</td>\n",
        "      <td>Virginia</td>\n",
-       "      <td>51075</td>\n",
-       "      <td>26</td>\n",
+       "      <td>51053.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>48143</th>\n",
+       "      <th>48129</th>\n",
        "      <td>2020-04-10</td>\n",
-       "      <td>Gloucester</td>\n",
+       "      <td>Danville city</td>\n",
        "      <td>Virginia</td>\n",
-       "      <td>51073</td>\n",
-       "      <td>18</td>\n",
+       "      <td>51590.0</td>\n",
+       "      <td>20</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>48142</th>\n",
+       "      <th>48128</th>\n",
        "      <td>2020-04-10</td>\n",
-       "      <td>Giles</td>\n",
+       "      <td>Cumberland</td>\n",
        "      <td>Virginia</td>\n",
-       "      <td>51071</td>\n",
-       "      <td>2</td>\n",
+       "      <td>51049.0</td>\n",
+       "      <td>8</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -677,33 +779,33 @@
        "      <td>2020-05-11</td>\n",
        "      <td>Washakie</td>\n",
        "      <td>Wyoming</td>\n",
-       "      <td>56043</td>\n",
+       "      <td>56043.0</td>\n",
        "      <td>7</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>134150 rows × 6 columns</p>\n",
+       "<p>135570 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              date         county     state   fips   cases  deaths\n",
-       "134376  2020-05-11  New York City  New York  36047  190546   19563\n",
-       "131463  2020-05-10  New York City  New York  36047  189656   19436\n",
-       "128552  2020-05-09  New York City  New York  36047  188663   19324\n",
-       "125641  2020-05-08  New York City  New York  36047  187157   19210\n",
-       "122735  2020-05-07  New York City  New York  36047  185653   19141\n",
-       "...            ...            ...       ...    ...     ...     ...\n",
-       "48145   2020-04-10         Greene  Virginia  51079       4       0\n",
-       "48144   2020-04-10      Goochland  Virginia  51075      26       0\n",
-       "48143   2020-04-10     Gloucester  Virginia  51073      18       0\n",
-       "48142   2020-04-10          Giles  Virginia  51071       2       0\n",
-       "135569  2020-05-11       Washakie   Wyoming  56043       7       0\n",
+       "              date         county     state     fips   cases  deaths\n",
+       "134376  2020-05-11  New York City  New York      NaN  190546   19563\n",
+       "131463  2020-05-10  New York City  New York      NaN  189656   19436\n",
+       "128552  2020-05-09  New York City  New York      NaN  188663   19324\n",
+       "125641  2020-05-08  New York City  New York      NaN  187157   19210\n",
+       "122735  2020-05-07  New York City  New York      NaN  185653   19141\n",
+       "...            ...            ...       ...      ...     ...     ...\n",
+       "48131   2020-04-10   Emporia city  Virginia  51595.0       5       0\n",
+       "48130   2020-04-10      Dinwiddie  Virginia  51053.0       3       0\n",
+       "48129   2020-04-10  Danville city  Virginia  51590.0      20       0\n",
+       "48128   2020-04-10     Cumberland  Virginia  51049.0       8       0\n",
+       "135569  2020-05-11       Washakie   Wyoming  56043.0       7       0\n",
        "\n",
-       "[134150 rows x 6 columns]"
+       "[135570 rows x 6 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,11 +816,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "gdf_countyTimeSeries = gpd.GeoDataFrame(pd.merge(left=df_nytCountyData,right=gdf_USCounties,left_on=\"fips\",right_on=\"GEOID\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2885"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list(set(gdf_countyTimeSeries[\"fips\"])))"
    ]
   },
   {
@@ -3527,6 +3649,27 @@
    ],
    "source": [
     "plotCountyDataWithComparison()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'gdf_countyTimeSeriesDiff' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-29-a8fae2070d0b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mgdf_countyTimeSeriesDiff\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'gdf_countyTimeSeriesDiff' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "gdf_countyTimeSeriesDiff.head()"
    ]
   },
   {
